Reader side tested with fake reader. Tests were done using as card: - real card - phone card with mock backend